Update validation test